--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="pain-points">
                     <div class="point">
                         <img src="horas-jp.png" alt="Ícone de livro chato">
-                        <p>Horas estudando gramática e kanjis que parecem impossíveis de memorizar?</p>
+                        <p>Tentar aprender um novo idioma que parece ser impossível de aprender</p>
                     </div>
                     <div class="point">
                         <img src="frustracao.png" alt="Ícone de fone de ouvido com interrogação">
@@ -70,7 +70,7 @@
 
         <section class="benefits-section">
             <div class="container">
-                 <h2 data-aos="fade-up">O que você vai destravar no Grupo Takanimes:</h2>
+                 <h2 data-aos="fade-up">O que você vai destravar com o método TakaJapa da Takanimes:</h2>
                  <div class="benefits-grid">
                     <div class="benefit-card" data-aos="fade-up" data-aos-delay="100">
                         <h3>Metodologias Variadas</h3>
