atualizando links dos botões

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">
                 Chega de métodos chatos. Descubra como ficar fluente se divertindo com o que você mais ama: animes, mangás e a cultura japonesa.
             </p>
-            <a href="#pricing" class="cta-button" data-aos="fade-up" data-aos-delay="300">QUERO FALAR JAPONÊS AGORA!</a>
+            <a href="https://pay.hotmart.com/H102126157J" class="cta-button" data-aos="fade-up" data-aos-delay="300">QUERO FALAR JAPONÊS AGORA!</a>
         </div>
     </header>
 
@@ -101,7 +101,7 @@
                     <p class="price">Pagamento único de <span>R$29,90</span></p>
                     <p class="no-monthly-fees">Sem mensalidades. Nunca.</p>
                 </div>
-                <a href="#" class="cta-button final-cta">QUERO GARANTIR MINHA VAGA AGORA!</a>
+                <a href="https://pay.hotmart.com/H102126157J" class="cta-button final-cta">QUERO GARANTIR MINHA VAGA AGORA!</a>
                 <p class="guarantee">Você não tem nada a perder e uma fluência inteira a ganhar.</p>
             </div>
         </section>
